--- a/styles.css
+++ b/styles.css
@@ -10,22 +10,37 @@
     box-sizing: border-box;
 }
 
-img{
-    width: 100%;
-    margin: 0;
-    /* filter: ; */
-}
-
 body {
     font-family: 'Inter','Lexend Deca', sans-serif;
     font-size: 15px;
     background-color: hsl(233, 47%, 7%);
 }
 
+.bg-images{
+    width: 100%;
+    height: auto;
+    position: relative;
+    background-color: hsl(277, 64%, 61%);
+    display: flex;
+    justify-content: center;
+}
+
+img{
+    width: 100%;
+    height: 100%;
+    content: '';
+    margin: 0;
+    mix-blend-mode: multiply;
+    opacity: .80;
+    position: relative;
+    top: 0;
+    left: 0;
+}
+
 /* Common Styles */
 main {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 main .container{
@@ -72,12 +87,13 @@ main .stats p{
     color: hsla(0, 0%, 100%, 0.6);
     text-transform: uppercase;
     font-size: 0.75rem;
+    font-weight: 400;
 }
 
 /* Mobile Design */
 
 @media screen and (max-width: 768px) {
-    .bg-header{
+    .bg-desktop{
         display: none;
     }
 
@@ -90,16 +106,18 @@ main .stats p{
         align-items: center;
         justify-content: center;
     }
+
+    img,
+    .bg-images{
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+    }  
     
-    img{
-        border-top-left-radius: 7px;
-        border-top-right-radius: 7px;
-    }
     .container{
         padding: 2rem 1.5rem;
         gap: 2rem;
-        border-bottom-left-radius: 7px;
-        border-bottom-right-radius: 7px;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
     }
 
     main .container{
@@ -119,7 +137,7 @@ main .stats p{
         flex-direction: column;
         gap: 1.5rem;
     }
-
+    
     main .stats div{
         align-items: center;
     }
@@ -132,25 +150,26 @@ main .stats p{
         display: none ;
     }
     body {
-        padding: 8rem;
+        padding: 10rem;
     }
 
     main {
         flex-direction: row-reverse;
-        justify-content: center;
+        /* justify-content: center; */
     }
     
-    img{
-            border-bottom-right-radius:7px ;
-            border-top-right-radius:7px ;
-        }
+    img,
+    .bg-images{ 
+        border-bottom-right-radius: 10px;
+        border-top-right-radius: 10px;
+    }        
         
     main .container{
-        padding: 3rem;
+        padding: 3rem 2.5rem;
         width: 100%;
         gap: 3rem;
-        border-bottom-left-radius:7px ;
-        border-top-left-radius:7px ;
+        border-bottom-left-radius: 10px;
+        border-top-left-radius: 10px;
     }
 
     main h1{
@@ -161,6 +180,7 @@ main .stats p{
     main .paragraph{
         text-align: left;
         width: 350px;
+        min-width: 50%;
      }
 
      main .stats {
